--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container nav">
         <a class="brand" href="#">
         <img src="./assets/LOGO.jpg" alt="Logo" class="logo">
-        <span>Peeyem</span>
+        <span>Peeyem Holidays</span>
         </a>
 
         <nav class="nav-links">
