--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <h3>ADDRESS</h3>
         <p>XCWW+9PF, Chirakkal - Mayyil - Kololam Rd<br>Mayyil, Kerala 670602</p>
-        <a href="mailto:info@yourdomain.com" class="mail-link">info@yourdomain.com</a>
+        <a href="mailto:peeyem.travels@gmail.com" class="mail-link">peeyem.travels@gmail.com</a>
 
         <h3>PHONE</h3>
         <p>+91 95629 22974<br>+91 9123456789</p>
@@ -116,9 +116,8 @@
         <h3>About Peeyem Holidays</h3>
         <p>We make travel stress-free and memorable with curated packages, expert support, and affordable deals. Start your journey with us today!</p>
         <div class="footer-social">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com/PeeYemToursTravels/"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/peeyemholidays/"><i class="fa-brands fa-instagram"></i></a>
         </div>
         </div>
         <div class="footer-col">
