conatct form details added

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
         <div class="contact-form">
         <h2>CONTACT FORM</h2>
-        <form action="#" method="POST">
+        <form action="https://formspree.io/f/mqadwnvw" method="POST">
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="email" name="email" placeholder="E-mail address" required>
             <textarea name="message" placeholder="Message" required></textarea>
             <button type="submit">SEND MESSAGE</button>
-        </form>
+        </form>        
         </div>
     </div>
     </section>
