--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
     <header class="header">
-    <div class="container nav">
-        <a class="brand" href="#">
-        <img src="./assets/LOGO.jpg" alt="Logo" class="logo">
-        <span>Peeyem Holidays</span>
-        </a>
+        <div class="container nav">
+            <a class="brand" href="#">
+            <img src="./assets/LOGO.jpg" alt="Logo" class="logo">
+            <span>Peeyem Holidays</span>
+            </a>
 
-        <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#about-section">About Us</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#packages">Packages</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact-section">Contact</a>
-        </nav>
+            <nav class="nav-links hidden-on-mobile">
+                <a href="#home">Home</a>
+                <a href="#about-section">About Us</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#packages">Packages</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact-section">Contact</a>
+            </nav>
 
-        <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-    </div>
+            <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+        </div>
     </header>
 
     <section id="home" class="hero">
