--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Peeyem Holidays | Explore More, Stress Less</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style/Style.css" />
+    <link rel="stylesheet" href="style/Style.css">
 </head>
 <body>
     <header class="header">
         <div class="container nav">
             <a class="brand" href="#">
-            <img src="./assets/LOGO.jpg" alt="Logo" class="logo">
-            <span>Peeyem Holidays</span>
+                <img src="./assets/LOGO.jpg" alt="Logo" class="logo">
+                <span>Peeyem Holidays</span>
             </a>
 
-            <nav class="nav-links hidden-on-mobile">
+            <nav class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#about-section">About Us</a>
                 <a href="#gallery">Gallery</a>
@@ -30,128 +30,165 @@
     </header>
 
     <section id="home" class="hero">
-    <div class="overlay"></div>
-    <div class="hero-content">
-        <h3>Welcome To Our</h3>
-        <h1>TRAVEL AGENCY</h1>
-        <p>Explore the world with stress-free and affordable packages.</p>
-        <a href="#packages" class="btn">Plan Your Trip</a>
-    </div>
+        <div class="overlay"></div>
+        <div class="hero-content">
+            <h3>Welcome To Our</h3>
+            <h1>PEEYEM HOLIDAYS</h1>
+            <p>Explore the world with stress-free and affordable packages.</p>
+            <a href="#packages" class="btn">Plan Your Trip</a>
+        </div>
+        <a href="#about-section" class="scroll-down-arrow">
+            <i class="fa-solid fa-chevron-down"></i>
+        </a>
     </section>
 
     <section id="about-section" class="about">
-    <div class="container">
-        <h1>WHY WE ARE THE BEST</h1>
-        <p class="subtitle">
-        At <strong>Peeyem Holidays</strong>, we believe travel should be simple, affordable, and unforgettable. 
-        With years of expertise in curating holiday packages, we focus on making your journey stress-free, enjoyable, and full of memories.
-        </p>
+        <div class="container">
+            <h1>WHY WE ARE THE BEST</h1>
+            <p class="subtitle">
+                At <strong>Peeyem Holidays</strong>, we believe travel should be simple, affordable, and unforgettable.
+                With years of expertise in curating holiday packages, we focus on making your journey stress-free, enjoyable, and full of memories.
+            </p>
 
-        <div class="features">
-        <div class="feature">
-            <div class="icon"><i class="fa-solid fa-plane"></i></div>
-            <h3>Amazing Travel</h3>
-            <p>From breathtaking destinations to seamless itineraries, we ensure every trip is designed for your comfort and excitement.</p>
-            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
-        </div>
+            <div class="features">
+                <div class="feature">
+                    <div class="icon"><i class="fa-solid fa-plane"></i></div>
+                    <h3>Amazing Travel</h3>
+                    <p>From breathtaking destinations to seamless itineraries, we ensure every trip is designed for your comfort and excitement.</p>
+                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                </div>
 
-        <div class="feature">
-            <div class="icon"><i class="fa-solid fa-water"></i></div>
-            <h3>Discover</h3>
-            <p>Explore hidden gems, cultural wonders, and unique adventures tailored to your travel interests.</p>
-            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
-        </div>
+                <div class="feature">
+                    <div class="icon"><i class="fa-solid fa-water"></i></div>
+                    <h3>Discover</h3>
+                    <p>Explore hidden gems, cultural wonders, and unique adventures tailored to your travel interests.</p>
+                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                </div>
 
-        <div class="feature">
-            <div class="icon"><i class="fa-solid fa-flag"></i></div>
-            <h3>Book Your Trip</h3>
-            <p>Easy booking, transparent pricing, and flexible packages that make planning your holiday hassle-free.</p>
-            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
-        </div>
+                <div class="feature">
+                    <div class="icon"><i class="fa-solid fa-flag"></i></div>
+                    <h3>Book Your Trip</h3>
+                    <p>Easy booking, transparent pricing, and flexible packages that make planning your holiday hassle-free.</p>
+                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                </div>
 
-        <div class="feature">
-            <div class="icon"><i class="fa-solid fa-comment"></i></div>
-            <h3>Nice Support</h3>
-            <p>Our friendly support team is here 24/7 to guide you through every step of your journey.</p>
-            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                <div class="feature">
+                    <div class="icon"><i class="fa-solid fa-comment"></i></div>
+                    <h3>Nice Support</h3>
+                    <p>Our friendly support team is here 24/7 to guide you through every step of your journey.</p>
+                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <section id="blog">
+        <div class="container">
+            <h2>OUR LATEST BLOG POSTS</h2>
+            <div id="blog-container" class="blog-posts">
+                <div class="blog-card skeleton-loading">
+                    <div class="skeleton-image"></div>
+                    <div class="blog-card-content">
+                        <div class="skeleton-line"></div>
+                        <div class="skeleton-line short"></div>
+                        <div class="skeleton-line"></div>
+                        <div class="skeleton-line short"></div>
+                    </div>
+                </div>
+                <div class="blog-card skeleton-loading">
+                    <div class="skeleton-image"></div>
+                    <div class="blog-card-content">
+                        <div class="skeleton-line"></div>
+                        <div class="skeleton-line short"></div>
+                        <div class="skeleton-line"></div>
+                        <div class="skeleton-line short"></div>
+                    </div>
+                </div>
+                <div class="blog-card skeleton-loading">
+                    <div class="skeleton-image"></div>
+                    <div class="blog-card-content">
+                        <div class="skeleton-line"></div>
+                        <div class="skeleton-line short"></div>
+                        <div class="skeleton-line"></div>
+                        <div class="skeleton-line short"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
     </section>
 
     <section id="contact-section" class="contact">
-    <div class="container contact-grid">
-        <div class="contact-info">
-        <h2>CONTACT INFO</h2>
-        <p>Feel free to get in touch with us. We are always open to discussing new trips, creative ideas, or opportunities to make your holidays stress-free.</p>
+        <div class="container contact-grid">
+            <div class="contact-info">
+                <h2>CONTACT INFO</h2>
+                <p>Feel free to get in touch with us. We are always open to discussing new trips, creative ideas, or opportunities to make your holidays stress-free.</p>
 
-        <h3>ADDRESS</h3>
-        <p>XCWW+9PF, Chirakkal - Mayyil - Kololam Rd<br>Mayyil, Kerala 670602</p>
-        <a href="mailto:peeyem.travels@gmail.com" class="mail-link">peeyem.travels@gmail.com</a>
+                <h3>ADDRESS</h3>
+                <p>XCWW+9PF, Chirakkal - Mayyil - Kololam Rd<br>Mayyil, Kerala 670602</p>
+                <a href="mailto:peeyem.travels@gmail.com" class="mail-link">peeyem.travels@gmail.com</a>
 
-        <h3>PHONE</h3>
-        <p>+91 95629 22974<br>+91 9123456789</p>
+                <h3>PHONE</h3>
+                <p>+91 95629 22974<br>+91 9123456789</p>
 
-        <div class="social-links">
-            <a href="https://www.facebook.com/PeeYemToursTravels/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/peeyemholidays/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/PeeYemToursTravels/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/peeyemholidays/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+
+            <div class="contact-form">
+                <h2>CONTACT FORM</h2>
+                <form action="https://formspree.io/f/mqadwnvw" method="POST">
+                    <input type="text" name="name" placeholder="Full Name" required>
+                    <input type="email" name="email" placeholder="E-mail address" required>
+                    <textarea name="message" placeholder="Message" required></textarea>
+                    <button type="submit">SEND MESSAGE</button>
+                </form>
+            </div>
         </div>
-        </div>
-
-        <div class="contact-form">
-        <h2>CONTACT FORM</h2>
-        <form action="https://formspree.io/f/mqadwnvw" method="POST">
-            <input type="text" name="name" placeholder="Full Name" required>
-            <input type="email" name="email" placeholder="E-mail address" required>
-            <textarea name="message" placeholder="Message" required></textarea>
-            <button type="submit">SEND MESSAGE</button>
-        </form>        
-        </div>
-    </div>
     </section>
 
     <footer class="site-footer">
-    <div class="container footer-grid">
-        <div class="footer-col">
-        <h3>About Peeyem Holidays</h3>
-        <p>We make travel stress-free and memorable with curated packages, expert support, and affordable deals. Start your journey with us today!</p>
-        <div class="footer-social">
-            <a href="https://www.facebook.com/PeeYemToursTravels/"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/peeyemholidays/"><i class="fa-brands fa-instagram"></i></a>
+        <div class="container footer-grid">
+            <div class="footer-col">
+                <h3>About Peeyem Holidays</h3>
+                <p>We make travel stress-free and memorable with curated packages, expert support, and affordable deals. Start your journey with us today!</p>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/PeeYemToursTravels/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/peeyemholidays/"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-col">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about-section">About Us</a></li>
+                    <li><a href="#packages">Packages</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Support</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="mailto:info@yourdomain.com">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Newsletter</h3>
+                <p>Get travel deals, tips, and inspiration straight to your inbox.</p>
+                <form class="newsletter">
+                    <input type="email" placeholder="Enter your email" required>
+                    <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
+                </form>
+            </div>
         </div>
+        <div class="footer-bottom">
+            <p>© 2025 Peeyem Holidays. All Rights Reserved.</p>
         </div>
-        <div class="footer-col">
-        <h3>Quick Links</h3>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about-section">About Us</a></li>
-            <li><a href="#packages">Packages</a></li>
-            <li><a href="#contact-section">Contact</a></li>
-        </ul>
-        </div>
-        <div class="footer-col">
-        <h3>Support</h3>
-        <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="mailto:info@yourdomain.com">Help Center</a></li>
-        </ul>
-        </div>
-        <div class="footer-col">
-        <h3>Newsletter</h3>
-        <p>Get travel deals, tips, and inspiration straight to your inbox.</p>
-        <form class="newsletter">
-            <input type="email" placeholder="Enter your email" required>
-            <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-        </form>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>© 2025 Peeyem Holidays. All Rights Reserved.</p>
-    </div>
     </footer>
-
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
