--- a/index.html
+++ b/index.html
@@ -115,33 +115,32 @@
                 <h2>OUR LATEST BLOG POSTS</h2>
                 <div class="blog-posts">
 
-                <div class="blog-card">
-                    <img src="./assets/blog1.jpg" alt="A person preparing for travel" class="blog-image">
-                    <div class="blog-card-content">
-                    <h3>10 Essential Travel Tips for Stress-Free Holidays</h3>
-                    <p>Discover the best ways to prepare for your journey, from smart packing to finding the best local food spots...</p>
-                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                    <div class="blog-card">
+                        <img src="./assets/premium.jpeg" alt="A person preparing for travel" class="blog-image">
+                        <div class="blog-card-content">
+                            <h3>10 Essential Travel Tips for Stress-Free Holidays</h3>
+                            <p>Discover the best ways to prepare for your journey, from smart packing to finding the best local food spots...</p>
+                            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="blog-card">
-                    <img src="./assets/blog2.jpg" alt="Backwaters of Kerala" class="blog-image">
-                    <div class="blog-card-content">
-                    <h3>Top 5 Destinations in Kerala You Can't Miss</h3>
-                    <p>From backwaters to hill stations, explore Kerala’s most enchanting travel spots with Peeyem Holidays...</p>
-                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                    <div class="blog-card">
+                        <img src="./assets/Munnar.jpg" alt="Backwaters of Kerala" class="blog-image">
+                        <div class="blog-card-content">
+                            <h3>Top 5 Destinations in Kerala You Can't Miss</h3>
+                            <p>From backwaters to hill stations, explore Kerala’s most enchanting travel spots with Peeyem Holidays...</p>
+                            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="blog-card">
-                    <img src="./assets/blog3.jpg" alt="Person on an adventurous trek" class="blog-image">
-                    <div class="blog-card-content">
-                    <h3>Adventure Holidays: How to Plan the Perfect Trip</h3>
-                    <p>Love thrill and adventure? Here’s a quick guide to planning an action-packed holiday experience...</p>
-                    <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                    <div class="blog-card">
+                        <img src="./assets/image.webp" alt="Person on an adventurous trek" class="blog-image">
+                        <div class="blog-card-content">
+                            <h3>Adventure Holidays: How to Plan the Perfect Trip</h3>
+                            <p>Love thrill and adventure? Here’s a quick guide to planning an action-packed holiday experience...</p>
+                            <a href="#" class="read-more">Read More <i class="fa-solid fa-chevron-right"></i></a>
+                        </div>
                     </div>
-                </div>
-
                 </div>
             </div>
         </section>
