blog image added

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
 
                     <div class="blog-card">
-                        <img src="./assets/Munnar.jpg" alt="Backwaters of Kerala" class="blog-image">
+                        <img src="./assets/house-boath.jpg" alt="Backwaters of Kerala" class="blog-image">
                         <div class="blog-card-content">
                             <h3>Top 5 Destinations in Kerala You Can't Miss</h3>
                             <p>From backwaters to hill stations, explore Kerala’s most enchanting travel spots with Peeyem Holidays...</p>
@@ -134,7 +134,7 @@
                     </div>
 
                     <div class="blog-card">
-                        <img src="./assets/image.webp" alt="Person on an adventurous trek" class="blog-image">
+                        <img src="./assets/hiking.jpg" alt="Person on an adventurous trek" class="blog-image">
                         <div class="blog-card-content">
                             <h3>Adventure Holidays: How to Plan the Perfect Trip</h3>
                             <p>Love thrill and adventure? Here’s a quick guide to planning an action-packed holiday experience...</p>
