whtsapp chat added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/Style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -580,6 +581,11 @@
             <div class="footer-bottom">
                 <p>© 2025 Peeyem Holidays. All Rights Reserved.</p>
             </div>
+            <a href="https://wa.me/9544478033" target="_blank" class="whatsapp-float">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+                        alt="Chat on WhatsApp" width="40" height="40">
+                <span class="whatsapp-text">Chat with us</span>
+            </a>
         </footer>
     </div>
     <script src="script.js"></script>
